--- a/custom_components/parmair/translations/en.json
+++ b/custom_components/parmair/translations/en.json
@@ -2,8 +2,8 @@
   "config": {
     "step": {
       "user": {
-        "title": "Connect to Parmair Ventilation",
-        "description": "Enter the connection details for your Parmair ventilation system. Current version: {version}.",
+        "title": "Connect to Parmair MAC",
+        "description": "Enter the connection details for your Parmair MAC ventilation system. Current version: {version}.",
         "data": {
           "host": "IP Address",
           "port": "Port",
