feat: Improve model auto-detection and add scan interval config
- Auto-detect model from VENT_MACHINE register (80 → MAC80, 100 → MAC100, 150 → MAC150)
- Add configurable polling interval (5-300 seconds, default 30)
- Add MAC100 model support to register map
- Update translations for scan_interval field (EN/FI)

--- a/custom_components/parmair/translations/en.json
+++ b/custom_components/parmair/translations/en.json
@@ -8,6 +8,7 @@
           "host": "IP Address",
           "port": "Port",
           "slave_id": "Modbus Slave ID",
+          "scan_interval": "Polling Interval (seconds)",
           "name": "Name"
         }
       }
